# Biznews-Jayant

./: .gitignore  README.md  pyproject.toml
biznews-jayant/: SKILL.md
biznews-jayant/agents/: openai.yaml
biznews-jayant/references/: output-contract.md
biznews-jayant/scripts/: biznews_jayant.py
biznews-jayant/scripts/lib/: __init__.py  biznews_core.py
tests/: test_biznews_core.py
tests/fixtures/: feed.xml
